Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18859

(qmt_handler.c:58:qmt_get()) ASSERTION( !is_default || id->qid_uid == 0 )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

       

      LustreError: 379653:0:(qmt_handler.c:58:qmt_get()) ASSERTION( !is_default || id->qid_uid == 0 ) failed:
      LustreError: 379653:0:(qmt_handler.c:58:qmt_get()) LBUG
      CPU: 20 PID: 379653 Comm: mdt05_003 Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.40.1.el8_lustre.ddn17.x86_64 #1
      Hardware name: DDN SFA400NVX2E, BIOS rel-1.16.2-0-gea1b7a073390-prebuilt.qemu.org 04/01/2014
      Call Trace:
      dump_stack+0x41/0x60
      lbug_with_loc.cold.8+0x5/0x43 [libcfs]
      qmt_get+0x185/0x3e0 [lquota]
      qmt_quotactl+0x309/0xa10 [lquota]
      mdt_quotactl+0x21f/0x880 [mdt]
      tgt_request_handle+0xc9c/0x1990 [ptlrpc]
      ptlrpc_server_handle_request+0x323/0xbd0 [ptlrpc]
      ptlrpc_main+0xb45/0x13a0 [ptlrpc]
      kthread+0x134/0x150
      ret_from_fork+0x1f/0x40
      Kernel panic - not syncing: LBUG

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: